fixed spacing on about section of index.tsx

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,10 @@
+#FirstThingOnPage {
+  padding-top: 10rem;
+}
+
 a:hover {
   transform: scale(1.05)
 }
-
 
 #Blog {
   text-decoration: none;
@@ -78,6 +81,7 @@ a {
   color: black;
   padding: 1rem;
   border: none;
+  font-weight: 800;
 }
 
 p {
